[package]
name = "space3"
version = "0.2.0"
authors = ["Alfred Chan <alfred8844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17.0"
log = "0.4"
serde = "1"
serde_derive = "1"
strum = "0.17"
strum_macros = "0.17"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
