[package]
authors = ["Alfred Chan <alfred8844@gmail.com>"]
edition = "2018"
name = "space3"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17.0"
enum-map = "0.6.3"
enumset = "1.0.1"
lazy_static = "1.4.0"
log = "0.4"
roman = "0.1.6"
serde = "1"
serde_derive = "1"
strum = "0.17"
strum_macros = "0.17"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = {version = "0.4.4", optional = true}
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = [
  'KeyboardEvent',
]
version = "0.3.4"
