[package]
authors = ["Alfred Chan <alfred8844@gmail.com>"]
edition = "2018"
name = "space3"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17.0"
enum-map = "0.6.4"
lazy_static = "1.4.0"
log = "0.4.11"
roman = "0.1.6"
serde = "1.0.118"
serde_derive = "1.0.118"
strum = "0.20.0"
strum_macros = "0.20.1"
wasm-bindgen = "0.2.69"
wasm-logger = "0.2.0"
wee_alloc = {version = "0.4.5", optional = true}
yew = "0.17.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies.web-sys]
features = [
  'KeyboardEvent',
]
version = "0.3.46"
